--- a/index.html
+++ b/index.html
@@ -17,14 +17,17 @@
     <script src="https://unpkg.com/@babel/standalone/babel.min.js"></script>
 
     <style>
-        .custom-scrollbar::-webkit-scrollbar { width: 4px; }
+        .custom-scrollbar::-webkit-scrollbar { width: 3px; }
         .custom-scrollbar::-webkit-scrollbar-track { background: rgba(30, 41, 59, 0.5); }
         .custom-scrollbar::-webkit-scrollbar-thumb { background: rgba(255, 255, 255, 0.2); border-radius: 4px; }
         .custom-scrollbar::-webkit-scrollbar-thumb:hover { background: rgba(255, 255, 255, 0.4); }
         html, body, #root { height: 100%; margin: 0; overflow: hidden; }
+        
+        /* Verhindert das Auswählen von Text beim Ziehen des Fensters */
+        body { -webkit-user-select: none; user-select: none; }
     </style>
 </head>
-<body class="bg-transparent font-sans select-none">
+<body class="bg-transparent font-sans">
     <div id="root"></div>
 
     <script type="text/babel">
@@ -47,6 +50,7 @@
         const Target = (props) => <IconBase {...props}><circle cx="12" cy="12" r="10"></circle><circle cx="12" cy="12" r="6"></circle><circle cx="12" cy="12" r="2"></circle></IconBase>;
         const Globe = (props) => <IconBase {...props}><circle cx="12" cy="12" r="10"></circle><line x1="2" y1="12" x2="22" y2="12"></line><path d="M12 2a15.3 15.3 0 0 1 4 10 15.3 15.3 0 0 1-4 10 15.3 15.3 0 0 1-4-10 15.3 15.3 0 0 1 4-10z"></path></IconBase>;
         const Pin = (props) => <IconBase {...props}><line x1="12" y1="17" x2="12" y2="22"></line><path d="M5 17h14v-1.76a2 2 0 0 0-1.11-1.79l-1.78-.9A2 2 0 0 1 15 10.76V6h1a2 2 0 0 0 0-4H8a2 2 0 0 0 0 4h1v4.76a2 2 0 0 1-1.11 1.79l-1.78.9A2 2 0 0 0 5 15.24Z"></path></IconBase>;
+        const Layout = (props) => <IconBase {...props}><rect x="3" y="3" width="18" height="18" rx="2" ry="2"></rect><line x1="9" y1="3" x2="9" y2="21"></line></IconBase>;
 
         const TimeTracker = () => {
             const [projects, setProjects] = useState(() => {
@@ -61,6 +65,7 @@
             });
             const [activeProjectId, setActiveProjectId] = useState(null);
             const [isSidebarExpanded, setIsSidebarExpanded] = useState(true);
+            const [forceWidgetMode, setForceWidgetMode] = useState(false);
             const [showAddModal, setShowAddModal] = useState(false);
             const [showPinInfo, setShowPinInfo] = useState(false);
             const [newProjectCode, setNewProjectCode] = useState('');
@@ -113,10 +118,10 @@
 
             return (
                 <div className="h-full flex bg-gray-50">
-                    {/* Main Content (verschwindet wenn schmal) */}
-                    <div className="hidden md:flex flex-1 p-8 flex-col justify-center max-w-4xl mx-auto">
+                    {/* Main Content (verschwindet wenn schmal ODER wenn Widget-Modus aktiv) */}
+                    <div className={`${forceWidgetMode ? 'hidden' : 'hidden md:flex'} flex-1 p-8 flex-col justify-center max-w-4xl mx-auto`}>
                         <h1 className="text-3xl font-bold mb-4 text-gray-900">Arbeitstag</h1>
-                        <p className="mb-8 text-gray-600">Fenster schmal ziehen für Widget-Modus.</p>
+                        <p className="mb-8 text-gray-600">Nutze den Widget-Button (oben rechts), um nur die Leiste zu sehen.</p>
                         <div className="grid gap-4">
                             <div className={`p-4 rounded-xl border ${activeProjectId ? 'bg-blue-50 border-blue-200' : 'bg-white border-gray-200'}`}>
                                 <h2 className="font-semibold mb-1 flex items-center gap-2">
@@ -131,60 +136,69 @@
                         </div>
                     </div>
 
-                    {/* Sidebar: Jetzt schmaler (w-64 statt w-80) */}
+                    {/* Sidebar: Breite passt sich an */}
                     <div className={`h-full bg-slate-900 text-white shadow-xl flex flex-col transition-all duration-300 z-50
-                        ${isSidebarExpanded ? 'w-full md:w-64' : 'w-20 md:w-20'} flex-shrink-0 border-l border-slate-800 relative`}
+                        ${forceWidgetMode ? 'w-full' : (isSidebarExpanded ? 'w-full md:w-52' : 'w-16 md:w-16')} flex-shrink-0 border-l border-slate-800 relative`}
                     >
-                        <div className="p-3 flex justify-between items-center bg-slate-950 border-b border-slate-800">
-                            {isSidebarExpanded && <span className="font-bold tracking-wide pl-2">Zeiterfassung</span>}
-                            <button onClick={() => setIsSidebarExpanded(!isSidebarExpanded)} className="p-2 hover:bg-slate-800 rounded-full text-slate-400 hover:text-white mx-auto">
-                                {isSidebarExpanded ? <XIcon size={18} /> : <Menu size={20} />}
-                            </button>
-                        </div>
-
-                        <div className="flex-1 overflow-y-auto p-3 space-y-4 custom-scrollbar">
-                            {projects.map(p => {
-                                const active = activeProjectId === p.id;
-                                return (
-                                    <div key={p.id} className={`group flex items-center cursor-pointer select-none ${isSidebarExpanded ? '' : 'justify-center'}`} onClick={() => toggleTimer(p.id)}>
-                                        <div className={`relative flex flex-col items-center justify-center rounded-full shadow-lg transition-all duration-200 border-2 
-                                            ${active ? `scale-110 ring-2 ring-opacity-50 border-transparent ${p.code === 'P' ? 'ring-gray-400' : 'ring-blue-400'}` : 'hover:scale-105 border-slate-700'} 
-                                            ${p.color} w-14 h-14 flex-shrink-0`}>
-                                            {active && <span className={`absolute inset-0 rounded-full opacity-50 animate-ping ${p.color}`}></span>}
-                                            {p.code === 'P' ? <Coffee size={20} className="mb-0.5 opacity-90"/> : 
-                                             p.code === 'OFF' ? <Briefcase size={20} className="mb-0.5 opacity-90"/> :
-                                             p.code === 'AKQ' ? <Target size={20} className="mb-0.5 opacity-90"/> :
-                                             (p.code === 'DEV' || p.code === 'WEB') ? <Globe size={20} className="mb-0.5 opacity-90"/> :
-                                             <><span className="text-[9px] opacity-60 leading-none">#{p.id}</span><span className="font-bold text-xs">{p.code}</span></>}
-                                            <div className="absolute inset-0 flex items-center justify-center opacity-0 group-hover:opacity-100 transition-opacity bg-black/20 rounded-full">
-                                                {active ? <Pause size={16} fill="white"/> : <Play size={16} fill="white"/>}
-                                            </div>
-                                        </div>
-                                        {isSidebarExpanded && (
-                                            <div className="ml-3 min-w-0 flex-1">
-                                                <div className={`text-sm font-medium truncate ${active ? 'text-white' : 'text-slate-400'}`}>{p.name}</div>
-                                                <div className={`font-mono text-lg leading-none ${active ? 'text-blue-400' : 'text-slate-600'}`}>{formatTime(p.time)}</div>
-                                            </div>
-                                        )}
-                                        {isSidebarExpanded && !p.isSystem && (
-                                            <button onClick={(e)=>handleDeleteProject(p.id, e)} className="p-2 text-slate-600 hover:text-red-400 opacity-0 group-hover:opacity-100"><Trash2 size={14}/></button>
-                                        )}
-                                    </div>
-                                );
-                            })}
-                            <div className="pt-2 flex justify-center">
-                                <button onClick={() => setShowAddModal(true)} className={`flex items-center justify-center rounded-full border border-dashed border-slate-700 text-slate-500 hover:text-white hover:border-slate-500 transition-all ${isSidebarExpanded ? 'w-full py-2 hover:bg-slate-800' : 'w-10 h-10'}`}>
-                                    <Plus size={20} />
+                        {/* Header: Mit Padding Top für Mac Ampel */}
+                        <div className="p-3 pt-4 flex justify-between items-center bg-slate-950 border-b border-slate-800">
+                            {isSidebarExpanded && <span className="font-bold tracking-wide pl-1 truncate text-sm">Zeit</span>}
+                            <div className={`flex gap-1 ${isSidebarExpanded ? '' : 'w-full justify-center'}`}>
+                                <button onClick={() => setForceWidgetMode(!forceWidgetMode)} className={`p-1.5 rounded-full hover:text-white ${forceWidgetMode ? 'text-blue-400 bg-slate-800' : 'text-slate-400 hover:bg-slate-800'}`} title={forceWidgetMode ? "Zurück zur Vollansicht" : "Widget Modus (nur Leiste)"}>
+                                    <Layout size={18} />
+                                </button>
+                                <button onClick={() => setIsSidebarExpanded(!isSidebarExpanded)} className="p-1.5 hover:bg-slate-800 rounded-full text-slate-400 hover:text-white">
+                                    {isSidebarExpanded ? <XIcon size={18} /> : <Menu size={20} />}
                                 </button>
                             </div>
                         </div>
 
-                        <div className="p-3 bg-slate-950 flex flex-col gap-2 border-t border-slate-800">
-                            <button onClick={exportCSV} className={`flex items-center justify-center space-x-2 bg-green-800 hover:bg-green-700 text-white rounded-lg transition-colors ${isSidebarExpanded ? 'py-2 px-4' : 'p-2'}`} title="Excel Export">
-                                <Download size={18} /> {isSidebarExpanded && <span className="text-sm font-medium">Export</span>}
+                        <div className="flex-1 overflow-y-auto p-2 space-y-3 custom-scrollbar">
+                            {projects.map(p => {
+                                const active = activeProjectId === p.id;
+                                // Zentrierung im eingeklappten oder Widget-Modus
+                                const justifyClass = isSidebarExpanded ? '' : 'justify-center';
+                                
+                                return (
+                                    <div key={p.id} className={`group flex items-center cursor-pointer select-none ${justifyClass}`} onClick={() => toggleTimer(p.id)}>
+                                        <div className={`relative flex flex-col items-center justify-center rounded-full shadow-lg transition-all duration-200 border-2 
+                                            ${active ? `scale-110 ring-2 ring-opacity-50 border-transparent ${p.code === 'P' ? 'ring-gray-400' : 'ring-blue-400'}` : 'hover:scale-105 border-slate-700'} 
+                                            ${p.color} w-10 h-10 flex-shrink-0`}>
+                                            {active && <span className={`absolute inset-0 rounded-full opacity-50 animate-ping ${p.color}`}></span>}
+                                            {p.code === 'P' ? <Coffee size={16} className="mb-0.5 opacity-90"/> : 
+                                             p.code === 'OFF' ? <Briefcase size={16} className="mb-0.5 opacity-90"/> :
+                                             p.code === 'AKQ' ? <Target size={16} className="mb-0.5 opacity-90"/> :
+                                             (p.code === 'DEV' || p.code === 'WEB') ? <Globe size={16} className="mb-0.5 opacity-90"/> :
+                                             <><span className="text-[8px] opacity-60 leading-none">#{p.id}</span><span className="font-bold text-[9px]">{p.code}</span></>}
+                                            <div className="absolute inset-0 flex items-center justify-center opacity-0 group-hover:opacity-100 transition-opacity bg-black/20 rounded-full">
+                                                {active ? <Pause size={14} fill="white"/> : <Play size={14} fill="white"/>}
+                                            </div>
+                                        </div>
+                                        {isSidebarExpanded && (
+                                            <div className="ml-3 min-w-0 flex-1 overflow-hidden">
+                                                <div className={`text-xs font-medium truncate ${active ? 'text-white' : 'text-slate-400'}`}>{p.name}</div>
+                                                <div className={`font-mono text-sm leading-none ${active ? 'text-blue-400' : 'text-slate-600'}`}>{formatTime(p.time)}</div>
+                                            </div>
+                                        )}
+                                        {isSidebarExpanded && !p.isSystem && (
+                                            <button onClick={(e)=>handleDeleteProject(p.id, e)} className="p-1 text-slate-600 hover:text-red-400 opacity-0 group-hover:opacity-100"><Trash2 size={14}/></button>
+                                        )}
+                                    </div>
+                                );
+                            })}
+                            <div className={`pt-2 flex ${isSidebarExpanded ? '' : 'justify-center'}`}>
+                                <button onClick={() => setShowAddModal(true)} className={`flex items-center justify-center rounded-full border border-dashed border-slate-700 text-slate-500 hover:text-white hover:border-slate-500 transition-all ${isSidebarExpanded ? 'w-full py-1.5 hover:bg-slate-800' : 'w-10 h-10'}`}>
+                                    <Plus size={16} />
+                                </button>
+                            </div>
+                        </div>
+
+                        <div className="p-2 bg-slate-950 flex flex-col gap-2 border-t border-slate-800">
+                            <button onClick={exportCSV} className={`flex items-center justify-center space-x-2 bg-green-800 hover:bg-green-700 text-white rounded-lg transition-colors ${isSidebarExpanded ? 'py-1.5 px-3' : 'p-2'}`} title="Excel Export">
+                                <Download size={16} /> {isSidebarExpanded && <span className="text-xs font-medium">Export</span>}
                             </button>
-                            <button onClick={() => setShowPinInfo(true)} className="flex items-center justify-center text-slate-600 hover:text-blue-400 py-1 text-xs gap-1" title="Immer im Vordergrund">
-                                <Pin size={14} /> {isSidebarExpanded && "Im Vordergrund?"}
+                            <button onClick={() => setShowPinInfo(true)} className="flex items-center justify-center text-slate-600 hover:text-blue-400 py-1 text-[10px] gap-1" title="Immer im Vordergrund">
+                                <Pin size={12} /> {isSidebarExpanded && "Anpinnen"}
                             </button>
                         </div>
                     </div>
