--- a/index.html
+++ b/index.html
@@ -17,11 +17,10 @@
     <script src="https://unpkg.com/@babel/standalone/babel.min.js"></script>
 
     <style>
-        .custom-scrollbar::-webkit-scrollbar { width: 3px; }
-        .custom-scrollbar::-webkit-scrollbar-track { background: rgba(30, 41, 59, 0.5); }
-        .custom-scrollbar::-webkit-scrollbar-thumb { background: rgba(255, 255, 255, 0.2); border-radius: 4px; }
-        .custom-scrollbar::-webkit-scrollbar-thumb:hover { background: rgba(255, 255, 255, 0.4); }
-        html, body, #root { height: 100%; margin: 0; overflow: hidden; }
+        .custom-scrollbar::-webkit-scrollbar { width: 0px; background: transparent; } /* Scrollbar komplett unsichtbar für cleanen Look */
+        
+        /* WICHTIG: Erlaubt dem Fenster, extrem schmal zu werden */
+        html, body, #root { height: 100%; margin: 0; overflow: hidden; min-width: 0 !important; width: 100%; }
         
         /* Verhindert das Auswählen von Text beim Ziehen des Fensters */
         body { -webkit-user-select: none; user-select: none; }
@@ -71,6 +70,19 @@
             const [newProjectCode, setNewProjectCode] = useState('');
             const [newProjectName, setNewProjectName] = useState('');
             const timerRef = useRef(null);
+
+            // Auto-Collapse Logik: Wenn Fenster zu schmal (< 200px), Menü automatisch einklappen
+            useEffect(() => {
+                const handleResize = () => {
+                    if (window.innerWidth < 200 && isSidebarExpanded) {
+                        setIsSidebarExpanded(false);
+                    }
+                };
+                window.addEventListener('resize', handleResize);
+                // Check once on mount
+                if (window.innerWidth < 200) setIsSidebarExpanded(false);
+                return () => window.removeEventListener('resize', handleResize);
+            }, [isSidebarExpanded]);
 
             useEffect(() => { localStorage.setItem('timeTrackerProjects_v2', JSON.stringify(projects)); }, [projects]);
             useEffect(() => {
