--- a/index.html
+++ b/index.html
@@ -18,6 +18,7 @@
 
     <style>
         .custom-scrollbar::-webkit-scrollbar { width: 0px; background: transparent; }
+        /* Erlaubt dem Fenster jede Größe */
         html, body, #root { height: 100%; margin: 0; overflow: hidden; min-width: 0 !important; width: 100%; }
         body { -webkit-user-select: none; user-select: none; }
     </style>
@@ -52,6 +53,7 @@
         const CalendarIcon = (props) => <IconBase {...props}><rect x="3" y="4" width="18" height="18" rx="2" ry="2"></rect><line x1="16" y1="2" x2="16" y2="6"></line><line x1="8" y1="2" x2="8" y2="6"></line><line x1="3" y1="10" x2="21" y2="10"></line></IconBase>;
         const ChevronLeft = (props) => <IconBase {...props}><polyline points="15 18 9 12 15 6"></polyline></IconBase>;
         const ChevronRight = (props) => <IconBase {...props}><polyline points="9 18 15 12 9 6"></polyline></IconBase>;
+        const Folder = (props) => <IconBase {...props}><path d="M22 19a2 2 0 0 1-2 2H4a2 2 0 0 1-2-2V5a2 2 0 0 1 2-2h5l2 3h9a2 2 0 0 1 2 2z"></path></IconBase>;
 
         // --- Helpers für Datum ---
         const getISODate = (date) => date.toISOString().slice(0, 10);
@@ -67,11 +69,11 @@
             const [selectedDate, setSelectedDate] = useState(new Date());
             
             const defaultProjects = [
-                { id: 1, code: 'OFF', name: 'Büroarbeit / Admin', color: 'bg-slate-600', time: 0, isSystem: true, isPaid: false },
-                { id: 2, code: 'AKQ', name: 'Akquise',            color: 'bg-orange-600', time: 0, isSystem: true, isPaid: false },
-                { id: 3, code: 'P',   name: 'Pause',              color: 'bg-gray-400', time: 0, isSystem: true, isPaid: false },
-                { id: 4, code: 'DEV', name: 'Website Projekt A',  color: 'bg-blue-500', time: 0, isPaid: true },
-                { id: 5, code: 'KDN', name: 'Kunden Beratung',    color: 'bg-green-500', time: 0, isPaid: true },
+                { id: 1, code: 'OFF', name: 'Büroarbeit / Admin', color: 'bg-slate-600', time: 0, isSystem: true, isPaid: false, url: '' },
+                { id: 2, code: 'AKQ', name: 'Akquise',            color: 'bg-orange-600', time: 0, isSystem: true, isPaid: false, url: '' },
+                { id: 3, code: 'P',   name: 'Pause',              color: 'bg-gray-400', time: 0, isSystem: true, isPaid: false, url: '' },
+                { id: 4, code: 'DEV', name: 'Website Projekt A',  color: 'bg-blue-500', time: 0, isPaid: true, url: '' },
+                { id: 5, code: 'KDN', name: 'Kunden Beratung',    color: 'bg-green-500', time: 0, isPaid: true, url: '' },
             ];
 
             const [projects, setProjects] = useState([]);
@@ -85,7 +87,8 @@
                     let template = defaultProjects;
                     if (keys.length > 0) {
                         const lastKey = keys[keys.length - 1];
-                        template = history[lastKey].map(p => ({ ...p, time: 0 }));
+                        // Migration: Ensure url field exists if old data is loaded
+                        template = history[lastKey].map(p => ({ ...p, time: 0, url: p.url || '' }));
                     }
                     setProjects(template);
                 }
@@ -123,10 +126,11 @@
             const [isHoveringSidebar, setIsHoveringSidebar] = useState(false);
             const [showAddModal, setShowAddModal] = useState(false);
             const [showPinInfo, setShowPinInfo] = useState(false);
-            const [showCalendarModal, setShowCalendarModal] = useState(false); // NEU: Calendar Modal State
+            const [showCalendarModal, setShowCalendarModal] = useState(false);
             
             const [newProjectCode, setNewProjectCode] = useState('');
             const [newProjectName, setNewProjectName] = useState('');
+            const [newProjectUrl, setNewProjectUrl] = useState(''); // New URL state
             const [newProjectPaid, setNewProjectPaid] = useState(true);
 
             // Calendar State
@@ -170,9 +174,10 @@
                     color: colors[Math.floor(Math.random() * colors.length)], 
                     time: 0,
                     isPaid: newProjectPaid,
+                    url: newProjectUrl, // Save URL
                     isSystem: false
                 }]);
-                setNewProjectCode(''); setNewProjectName(''); setNewProjectPaid(true); setShowAddModal(false);
+                setNewProjectCode(''); setNewProjectName(''); setNewProjectUrl(''); setNewProjectPaid(true); setShowAddModal(false);
             };
 
             const handleDeleteProject = (id, e) => {
@@ -196,9 +201,9 @@
 
             const exportCSV = () => {
                 const dateStr = selectedDate.toLocaleDateString('de-DE');
-                let csv = "data:text/csv;charset=utf-8,Datum;ID;Kürzel;Projekt;Bezahlt;Zeit;IndustrieStd;Sekunden\n";
+                let csv = "data:text/csv;charset=utf-8,Datum;ID;Kürzel;Projekt;Bezahlt;Link;Zeit;IndustrieStd;Sekunden\n";
                 projects.forEach(p => { 
-                    if (p.time > 0) csv += `${dateStr};${p.id};${p.code};${p.name};${p.isPaid ? 'Ja' : 'Nein'};${formatTime(p.time)};${formatDecimalTime(p.time)};${p.time}\n`; 
+                    if (p.time > 0) csv += `${dateStr};${p.id};${p.code};${p.name};${p.isPaid ? 'Ja' : 'Nein'};${p.url || ''};${formatTime(p.time)};${formatDecimalTime(p.time)};${p.time}\n`; 
                 });
                 const link = document.createElement("a");
                 link.setAttribute("href", encodeURI(csv));
@@ -328,7 +333,14 @@
                                                 <div className="flex items-center gap-3">
                                                     <div className={`w-3 h-3 rounded-full shadow-sm ${p.color}`}></div>
                                                     <div>
-                                                        <div className="font-medium text-gray-900">{p.name}</div>
+                                                        <div className="flex items-center gap-2">
+                                                            <div className="font-medium text-gray-900">{p.name}</div>
+                                                            {p.url && (
+                                                                <a href={p.url} target="_blank" rel="noopener noreferrer" className="text-blue-500 hover:text-blue-700" title="Ordner öffnen" onClick={(e) => e.stopPropagation()}>
+                                                                    <Folder size={16} />
+                                                                </a>
+                                                            )}
+                                                        </div>
                                                         <div className="text-xs text-gray-500 flex items-center gap-1">
                                                             <span className="font-mono bg-gray-100 px-1.5 py-0.5 rounded text-[10px] tracking-wider">{p.code}</span>
                                                             <span className={p.isPaid ? "text-green-600" : "text-slate-400"}>• {p.isPaid ? 'Bezahlt' : 'Intern'}</span>
@@ -414,13 +426,19 @@
                                             <div className="ml-3 min-w-0 flex-1 overflow-hidden">
                                                 <div className={`text-xs font-medium truncate flex items-center gap-1 ${active ? 'text-white' : 'text-slate-400'}`}>
                                                     {p.name}
+                                                    {p.url && <Folder size={12} className="text-blue-400 inline ml-1" />}
                                                 </div>
                                                 <div className={`font-mono text-sm leading-none ${active ? 'text-blue-400' : 'text-slate-600'}`}>{formatTime(p.time)}</div>
                                             </div>
                                         )}
                                         {showSidebarText && (
                                             <div className="flex items-center opacity-0 group-hover:opacity-100 transition-opacity">
-                                                <button onClick={(e) => togglePaidStatus(p.id, e)} className={`p-1 mr-1 rounded ${p.isPaid ? 'text-green-400 hover:text-green-300' : 'text-slate-600 hover:text-slate-400'}`}>
+                                                {p.url && (
+                                                    <a href={p.url} target="_blank" rel="noopener noreferrer" className="p-1 mr-1 rounded text-blue-400 hover:text-blue-300" title="Ordner öffnen" onClick={(e) => e.stopPropagation()}>
+                                                        <Folder size={14} />
+                                                    </a>
+                                                )}
+                                                <button onClick={(e) => { e.stopPropagation(); togglePaidStatus(p.id, e); }} className={`p-1 mr-1 rounded ${p.isPaid ? 'text-green-400 hover:text-green-300' : 'text-slate-600 hover:text-slate-400'}`}>
                                                     <DollarSign size={14} />
                                                 </button>
                                                 {!p.isSystem && (
@@ -457,6 +475,7 @@
                                 <form onSubmit={handleAddProject} className="space-y-3">
                                     <input autoFocus maxLength={4} placeholder="Kürzel (z.B. WEB)" className="w-full p-2 border rounded uppercase font-mono" value={newProjectCode} onChange={e=>setNewProjectCode(e.target.value)} />
                                     <input placeholder="Name" className="w-full p-2 border rounded" value={newProjectName} onChange={e=>setNewProjectName(e.target.value)} />
+                                    <input placeholder="SharePoint / Ordner Link" className="w-full p-2 border rounded text-sm text-blue-600" value={newProjectUrl} onChange={e=>setNewProjectUrl(e.target.value)} />
                                     <label className="flex items-center space-x-2 cursor-pointer p-2 border rounded hover:bg-gray-50">
                                         <input type="checkbox" checked={newProjectPaid} onChange={(e) => setNewProjectPaid(e.target.checked)} className="w-4 h-4 text-blue-600 rounded focus:ring-blue-500" />
                                         <div className="flex items-center text-sm text-gray-700"><DollarSign size={16} className="mr-1 text-green-600"/> Bezahltes Projekt?</div>
